# DeeJay

./: .gitignore  README.md  TODO
client/: package-lock.json  package.json
client/src/: App.js  View.jsx
server/: .env  .env.local  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  useful_cmd
server/src/: Logger.rs  app.js  db.rs  errors.rs  handlers.rs  main.rs  model.rs  redis.rs  services.rs  todo.md
server/src/api/: spotify.rs
server/src/config/: config.js
server/src/db/: mod.rs  mongo.rs  redis.rs
server/src/models/: login.js  user.js  user_model.rs
server/src/routes/: auth.js  database_routes.rs  deejay_routes.rs  mod.rs  mongoapi.js  packet_struct.rs  redis.js  spotifyapi.js  user_login_routes.rs
server/src/services/: database_services.rs  deejay_services.rs  mod.rs  random.rs
server/src/spotify/: spotify.rs
