[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2.1"
redis = { version = "0.21.4", features = ["tokio-comp", "connection-manager"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = "1"
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
serde_json = "1.0.73"
derive_more = "0.99.17"
log = "0.4.14"
sanitizer = "0.1.6"
